--- a/Cientweb/Pages/Clients/Index.cshtml
+++ b/Cientweb/Pages/Clients/Index.cshtml
@@ -1,16 +1,18 @@
 ﻿@page
 @model Cientweb.Pages.Clients.IndexModel
 @{
-
+    
 }
-
+<h1>Welcome</h1>
+<a asp-page="Index" asp-page-handler="Logout">Logout</a>
+<br />
 <br />
 <h2>List of Clients</h2>
 <a class='btn btn-primary btn-sm' href='/Clients/Create'>New Client</a>
 <table class="table">
     <thead >
         <tr>
-            <th>ID</th>
+            <!-- <th>ID</th>-->
             <th>Name</th>
             <th>Email</th>
             <th>Phone</th>
@@ -23,15 +25,15 @@
         @foreach(var item in Model.listClients)
         {
             <tr>
-                <td>@item.id</td>
+               <!-- <td>@item.id</td> -->
                 <td>@item.name</td>
                 <td>@item.email</td>
                 <td>@item.phone</td>
                 <td>@item.address</td>
                 <td>@item.create_at</td>
                 <td>
-                    <a class=""btn btn-primary btn-sm" href="/Clients/Edit?id=@item.id">Edit</a>
-                    <a class="" btn btn-danger btn-sm" href="/Clients/Delete?id=@item.id">Delete</a>
+                    <a class="btn btn-warning btn-sm" href="/Clients/Edit?id=@item.id">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="/Clients/Delete?id=@item.id">Delete</a>
                 </td>
             </tr>
         }
