--- a/Cientweb/Pages/Index.cshtml
+++ b/Cientweb/Pages/Index.cshtml
@@ -1,10 +1,20 @@
 ﻿@page
 @model IndexModel
-@{
-    ViewData["Title"] = "Home page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h3>Login Form</h3>
+<h5>@Model.Msg</h5>
+<form method="post" asp-page="Index">
+    <table>
+        <tr>
+            <td>Username</td>
+            <td><input type="text" asp-for="@Model.Username" required/></td>
+        </tr>
+        <tr>
+            <td>Password</td>
+            <td><input type="text" asp-for="@Model.Password" required/></td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td><input type="submit" value="Login" /></td>
+        </tr>
+    </table>
+</form>
